# magick-bet

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
.planning/: STATE.md  phase6-report.md  phase7-report.md
app/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
app/src/: App.tsx  ErrorBoundary.tsx  constants.ts  main.tsx
app/src/components/: AdminPanel.tsx  BetForm.tsx  BetGrid.tsx  BetInput.tsx  BetModal.tsx  BetPanel.tsx  CandlestickChart.tsx  ChartGrid.tsx  CountdownTimer.tsx  LivePriceWidget.tsx  LoadingSpinner.tsx  MarketCard.tsx  MarketList.tsx  MarketUnifiedBoard.tsx  MyBetsSidebar.tsx  MySidebar.tsx  Navbar.tsx  PriceChart.tsx  PriceSparkline.tsx  PriceTickerBar.tsx  ProfileSidebar.tsx  RoundTimer.tsx  StatusBar.tsx  WalletButton.tsx  ZoneGrid.tsx
app/src/hooks/: useClaimWinnings.ts  useCountdown.ts  useCreateMarket.ts  useCreatePrivateBet.ts  useDelegateMarket.ts  useMarkets.ts  useMyBets.ts  usePlaceBet.ts  usePriceData.ts  usePythPrice.ts  useResolveMarket.ts  useRound.ts  useRuntimePrice.ts  useZones.ts
programs/oracle_bet/: Cargo.toml
programs/oracle_bet/src/: errors.rs  lib.rs
programs/oracle_bet/src/instructions/: claim_winnings.rs  create_market.rs  create_private_bet.rs  delegate_market.rs  delegate_private_bet.rs  initialize_factory.rs  mod.rs  place_bet.rs  resolve_market.rs
programs/oracle_bet/src/state/: market.rs  market_factory.rs  mod.rs  player_bet.rs  user_position.rs
tests/: README-devnet.md  devnet-integration.ts  oracle_bet.ts
(+4 files in other folders)
